--- a/lrnsys-redux.html
+++ b/lrnsys-redux.html
@@ -1,34 +1,1 @@
-<link rel="import" href="../polymer/polymer.html">
-
-<!--
-`lrnsys-redux`
-A LRN element
-
-@demo demo/index.html
--->
-
-<dom-module id="lrnsys-redux">
-  <template>
-    <style>
-      :host {
-        display: block;
-      }
-    </style>
-    <h2>[[title]]</h2>
-  </template>
-
-  <script>
-    Polymer({
-
-      is: 'lrnsys-redux',
-
-      properties: {
-        title: {
-          type: String,
-          value: 'lrnsys-redux',
-        },
-      },
-
-    });
-  </script>
-</dom-module>
+<script src="node_modules/redux/dist/redux.js"></script>
